--- a/isha-trial-flink/pom.xml
+++ b/isha-trial-flink/pom.xml
@@ -77,17 +77,17 @@ under the License.
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-java</artifactId>
-			<version>0.9.1</version>
+			<version>0.10-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-streaming-core</artifactId>
-			<version>0.9.1</version>
+			<version>0.10-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-clients</artifactId>
-			<version>0.9.1</version>
+			<version>0.10-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
@@ -315,19 +315,19 @@ under the License.
 				<dependency>
 					<groupId>org.apache.flink</groupId>
 					<artifactId>flink-java</artifactId>
-					<version>0.9.1</version>
+					<version>0.10-SNAPSHOT</version>
 					<scope>provided</scope>
 				</dependency>
 				<dependency>
 					<groupId>org.apache.flink</groupId>
 					<artifactId>flink-streaming-core</artifactId>
-					<version>0.9.1</version>
+					<version>0.10-SNAPSHOT</version>
 					<scope>provided</scope>
 				</dependency>
 				<dependency>
 					<groupId>org.apache.flink</groupId>
 					<artifactId>flink-clients</artifactId>
-					<version>0.9.1</version>
+					<version>0.10-SNAPSHOT</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>
